--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  text-decoration: none;
 }
 
 .logo {
@@ -39,4 +40,22 @@
 
 .read-the-docs {
   color: #888;
+}
+
+li {
+  text-decoration: none;
+}
+ul,
+ol {
+  list-style-type: none;
+}
+.loading {
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  color: teal;
+}
+.header {
+  padding: 12px 36px;
+  position: static;
 }
